--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -12,6 +12,12 @@
   <body>
     <%= render 'shared/flashes' %>
     <%= render 'shared/navbar' %>
-    <%= yield %>
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-6 offset-3">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
