--- a/lectures/restaurants-with-pundit/app/views/restaurants/index.html.erb
+++ b/lectures/restaurants-with-pundit/app/views/restaurants/index.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Restaurants</h1>
-
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -10,20 +8,25 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @restaurants.each do |restaurant| %>
       <tr>
         <td><%= restaurant.name %></td>
-        <td><%= restaurant.user_id %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= restaurant.user.email %></td>
+        <% if policy(restaurant).show? %>
+          <td><%= link_to 'Show', restaurant %></td>
+        <% end %>
+        <% if policy(restaurant).edit? %>
+          <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
+        <% end %>
+        <% if policy(restaurant).destroy? %>
+          <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Restaurant', new_restaurant_path %>
+<% if policy(Restaurant).new? %>
+  <%= link_to 'New Restaurant', new_restaurant_path %>
+<% end %>
