--- a/lectures/imdb-search/app/views/movies/index.html.erb
+++ b/lectures/imdb-search/app/views/movies/index.html.erb
@@ -1,6 +1,14 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-sm-8">
+      <%= form_tag root_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a movie"
+        %>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
       <div id="movies">
         <% @movies.each do |movie| %>
           <h4><%= movie.title %></h4>
